<resources>
    <string name="app_name">Fefes Blog</string>
    <string name="newposts">Neue Posts</string>
    <string name="bookmarks">Lesezeichen</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_title">Suchbegriff</string>
    <string name="search">Suche</string>
    <string name="bookmark">bookmark</string>
    <string name="share">Share</string>
    <string name="share_to">Sende Blog Post via</string>
    <string name="settings">Settings</string>
    <string name="pref_background_update_key">background_update</string>
    <string name="pref_background_update_title">Hintergrund-Update</string>
    <string name="pref_background_update_text">Updates werden automatisch im Hintergrund synchronisiert und geladen, wenn eine Internetverbindung besteht.</string>
    <string name="pref_notification_title">Benachrichtigungen</string>
    <string name="pref_notification_key">notification_key</string>
    <string name="pref_notification_text">Sie werden bei Updates und neuen Posts benachrichtigt.</string>
    <string name="pref_preview_size_key">preview_key</string>
    <string name="pref_preview_size_title">Vorschau-Größe</string>
    <string name="pref_preview_size_default">6</string>
    <string name="pref_update_seq_key">date_format_key</string>
    <string name="pref_update_seq_title">Update Häufigkeit</string>
    <string name="pref_update_seq_default">3600000</string>
    <string name="pref_preview_size_summary">Zeigt die Posts in der angegebenen Zeilenanzahl.</string>
    <string name="pref_update_seq_summary">Ausführung der Hintergrundupdates im angegeben Intervall.</string>
    <string name="no_network">Kein Internet!</string>
    <string name="basic_url">https://blog.fefe.de</string>
    <string name="share_link">Link freigeben</string>
    <string name="pref_theme_key">thememode_key</string>
    <string name="pref_theme_title">App Design</string>
    <string name="pref_theme_text">App im dunklen Design verwenden</string>
    <string name="search_hint">Suchbegriff</string>
    <string name="pref_preview_key">preview_switch_key</string>
    <string name="pref_preview_title">Vorschau deaktivieren</string>
    <string name="pref_preview_text">Alle Blog Posts werden komplett angezeigt.</string>
    <string name="pref_auto_theme_key">pref_auto_night_mode</string>
    <string name="pref_amoled_theme_key">pref_amoled_night_mode</string>
    <string name="pref_auto_theme_title">Automatischer Nachtmodus</string>
    <string name="pref_auto_theme_text">App-Design automatisch anpassen</string>
    <string name="pref_sensitivity_key">pref_sensitivity_value</string>
    <string name="pref_sensitiy_title">Sensitivity</string>
    <string name="pref_sensitivity_text">Empfindlichkeit des automatischen Nachtmodus</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_amoled_theme_title">Amoled</string>
    <string name="pref_amoled_theme_text">Im Nachtmodus echtes Schwarz verwenden</string>
    <string name="pref_sensitivity_summary">Bei höheren Werten wird der Nachtmodus früher aktiviert</string>
</resources>
