<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Synchronisierung">

        <SwitchPreference
            android:key="@string/pref_background_update_key"
            android:title="@string/pref_background_update_title"
            android:summary="@string/pref_background_update_text"
            android:defaultValue="@bool/pref_background_update_default"/>

        <SwitchPreference
            android:key="@string/pref_notification_key"
            android:title="@string/pref_notification_title"
            android:summary="@string/pref_notification_text"
            android:defaultValue="@bool/pref_notification_default"/>

        <ListPreference
            android:key="@string/pref_update_seq_key"
            android:title="@string/pref_update_seq_title"
            android:dialogTitle="@string/pref_update_seq_title"
            android:summary="@string/pref_update_seq_summary"
            android:entries="@array/pref_update_seq_entries"
            android:entryValues="@array/pref_update_seq_values"
            android:defaultValue="@string/pref_update_seq_default"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Übersicht">

        <SwitchPreference
            android:key="@string/pref_preview_key"
            android:title="@string/pref_preview_title"
            android:summary="@string/pref_preview_text"
            android:defaultValue="@bool/pref_preview_default"/>

        <ListPreference
            android:key="@string/pref_preview_size_key"
            android:title="@string/pref_preview_size_title"
            android:dialogTitle="@string/pref_preview_size_title"
            android:summary="@string/pref_preview_size_summary"
            android:entries="@array/pref_preview_size_entries"
            android:entryValues="@array/pref_preview_size_values"
            android:defaultValue="@string/pref_preview_size_default"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Design">

        <SwitchPreference
            android:key="@string/pref_theme_key"
            android:title="@string/pref_theme_title"
            android:summary="@string/pref_theme_text"
            android:defaultValue="@bool/pref_theme_default"/>

        <SwitchPreference
            android:key="@string/pref_auto_theme_key"
            android:title="@string/pref_auto_theme_title"
            android:summary="@string/pref_auto_theme_text"
            android:defaultValue="@bool/pref_auto_theme_default"/>

    </PreferenceCategory>

</PreferenceScreen>